# LudoGame

./: .gitignore  CMakeLists.txt
Docs/html/: _decision_maker_8h_source.html  _dice_8h_source.html  _game_8h_source.html  _i_observer_8h_source.html  _ludo_grid_8h_source.html  _observable_8h_source.html  _pawn_8h_source.html  _player_8h_source.html  _player_color_8h_source.html  _u_i_ludo_8h_source.html  annotated.html  annotated_dup.js  class_decision_maker-members.html  class_decision_maker.html  class_decision_maker.js  class_dice-members.html  class_dice.html  class_dice.js  class_game-members.html  class_game.html  class_game.js  class_i_observer-members.html  class_i_observer.html  class_i_observer.js  class_ludo_grid-members.html  class_ludo_grid.html  class_ludo_grid.js  class_observable-members.html  class_observable.html  class_observable.js  class_pawn-members.html  class_pawn.html  class_pawn.js  class_player-members.html  class_player.html  class_player.js  class_u_i_ludo-members.html  class_u_i_ludo.html  class_u_i_ludo.js  classes.html  (+42 more)
Docs/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_4.js  classes_6.js  functions_0.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_a.js  functions_b.js  functions_f.js  searchdata.js
Docs/man/man3/: DecisionMaker.3  Dice.3  Game.3  IObserver.3  LudoGrid.3  Observable.3  Pawn.3  Player.3  UILudo.3
LibLudo/: CMakeLists.txt  DecisionMaker.cpp  DecisionMaker.h  Dice.h  Game.cpp  Game.h  IObserver.h  Observable.cpp  Pawn.h  Player.h  PlayerColor.h
LibLudo/gameManagement/decisionMaker/: DecisionMaker.h
LibLudo/gameManagement/game/: Game.cpp  Game.h
LibLudo/model/dice/: Dice.cpp  Dice.h
LibLudo/model/pawn/: Pawn.cpp  Pawn.h
LibLudo/model/player/: Player.cpp  Player.h
LibLudo/model/playerColor/: PlayerColor.h
LibLudo/observer/: IObserver.h  Observable.h
LudoTests/: CMakeLists.txt  DecisionMakerTests.cpp  DiceTests.cpp  GameTests.cpp  PawnTests.cpp  PlayerTests.cpp  main.cpp
UILudo/: CMakeLists.txt  LudoGrid.cpp  LudoGrid.h  UILudo.cpp  UILudo.ui  main.cpp
UILudo/resources/: UILudo.qrc
UILudo/widgets/ludoGrid/: LudoGrid.cpp  LudoGrid.h
UILudo/windows/uiLudo/: UILudo.h  UILudo.ui
